// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperValidators register multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3716,
  "gasUsed": 592652,
}
`;

exports[`KeeperValidators register multiple validators succeeds 2`] = `
Object {
  "calldataByteLength": 3716,
  "gasUsed": 567598,
}
`;

exports[`KeeperValidators register single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1508,
  "gasUsed": 293808,
}
`;

exports[`KeeperValidators register single validator succeeds 2`] = `
Object {
  "calldataByteLength": 1540,
  "gasUsed": 259181,
}
`;

exports[`KeeperValidators set validators oracles succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32165,
}
`;
